--- a/committee.html
+++ b/committee.html
@@ -87,7 +87,7 @@
 
     <section id="committee">
         <div class="container">
-            <div id="committee-title" class="section-header">
+            <div id="committee-title" class="section-header" data-aos="fade-up">
                 <p>Community Members</p>
                 <h2>社区成员</h2>
                 <p id="committee-title-tip">（按照姓名排序）</p>
@@ -96,7 +96,7 @@
             <div id="committee-container" class="section team">
             </div>
 
-            <div id="committee-former-title" class="section-header">
+            <div id="committee-former-title" class="section-header" data-aos="fade-up">
                 <p>Former Community Members</p>
                 <h2>历任成员</h2>
                 <p id="committee-former-title-tip">（按照姓名排序）</p>
