update. index 社区成员排序依据描述； update. html 网页脚。

--- a/index.html
+++ b/index.html
@@ -144,10 +144,11 @@
                     <p>Community Members</p>
                     <h2>社区成员</h2>
                     <p id="committee-title-tip">衷心感谢您为 MLNLP 社区做出的贡献。</p>
+                    <p id="committee-title-sub-tip">（按照姓名排序）</p>
                 </a>
             </div>
 
-            <div id="committee-container" class="section team">
+            <div id="committee-container" class="section team committee-container-bottom">
             </div>
         </div>
     </section>
@@ -320,12 +321,12 @@
 
                 <div class="col-lg-2 col-md-4 footer-wechat">
                     <h4>Github</h4>
-                    <img src="assets/img/qrcode/github.jpg" alt="MLNLP_wechat">
+                    <img src="assets/img/qrcode/github.png" alt="MLNLP_wechat">
                 </div>
 
                 <div class="col-lg-2 col-md-4 footer-wechat">
                     <h4>Bilibili</h4>
-                    <img src="assets/img/qrcode/bilibili.jpg" alt="MLNLP_wechat">
+                    <img src="assets/img/qrcode/bilibili.png" alt="MLNLP_wechat">
                 </div>
 
                 <div class="col-lg-2 col-md-6 footer-contact">
