--- a/activity_category.html
+++ b/activity_category.html
@@ -407,12 +407,12 @@
 
                     <div class="col-lg-2 col-md-4 footer-wechat">
                         <h4>Github</h4>
-                        <img src="assets/img/qrcode/github.jpg" alt="MLNLP_wechat">
+                        <img src="assets/img/qrcode/github.png" alt="MLNLP_wechat">
                     </div>
 
                     <div class="col-lg-2 col-md-4 footer-wechat">
                         <h4>Bilibili</h4>
-                        <img src="assets/img/qrcode/bilibili.jpg" alt="MLNLP_wechat">
+                        <img src="assets/img/qrcode/bilibili.png" alt="MLNLP_wechat">
                     </div>
 
                     <div class="col-lg-2 col-md-6 footer-contact">
