--- a/committee.html
+++ b/committee.html
@@ -102,7 +102,7 @@
                 <p id="committee-former-title-tip">（按照姓名排序）</p>
             </div>
 
-            <div id="committee-former-container" class="section team">
+            <div id="committee-former-container" class="section team committee-container-bottom">
             </div>
         </div>
 
@@ -228,12 +228,12 @@
 
                 <div class="col-lg-2 col-md-4 footer-wechat">
                     <h4>Github</h4>
-                    <img src="assets/img/qrcode/github.jpg" alt="MLNLP_wechat">
+                    <img src="assets/img/qrcode/github.png" alt="MLNLP_wechat">
                 </div>
 
                 <div class="col-lg-2 col-md-4 footer-wechat">
                     <h4>Bilibili</h4>
-                    <img src="assets/img/qrcode/bilibili.jpg" alt="MLNLP_wechat">
+                    <img src="assets/img/qrcode/bilibili.png" alt="MLNLP_wechat">
                 </div>
 
                 <div class="col-lg-2 col-md-6 footer-contact">
