update. html 移动端（窄屏）适配

--- a/committee.html
+++ b/committee.html
@@ -102,6 +102,7 @@
                 <p id="committee-former-title-tip">（按照姓名排序）</p>
             </div>
 
+            <!-- TODO: 窄屏样式优化 -->
             <div id="committee-former-container" class="section team committee-container-bottom">
             </div>
         </div>
