--- a/activity.html
+++ b/activity.html
@@ -101,7 +101,7 @@
                     <div id="activity-description"></div>
                 </div>
                 <div class="tab-content row justify-content-center" data-aos="fade-up" data-aos-delay="200">
-                    <div id="activity-segments" class="col-9 justify-content-center" data-aos="fade-up"></div>
+                    <div id="activity-segments" class="col-lg-9 tab-pane fade show active" data-aos="fade-up"></div>
                 </div>
             </div>
         </div>
