--- a/activity_category.html
+++ b/activity_category.html
@@ -189,18 +189,18 @@
                     // 构建 HTML 字符串
                     html_str += `
                 <div class="row activity-category-box" data-aos="fade-up">
-                    <a href="${activity.html_url}" class="col-5 activity-category-cover-box">
+                    <a href="${activity.html_url}" class="col-12 col-md-5 activity-category-cover-box">
                         <img loading="lazy" src="${activity.cover_url}" alt="">
                     </a>
-                    <div class="col-7 activity-category-info">
+                    <div class="col-12 col-md-7 activity-category-info">
                         <div class="col">
                             <div class="row">
-                                <div class="col-10">
+                                <div class="col-9">
                                     <a href="${activity.html_url}">
                                         <h2 class="activity-category-data-title">${activity.title}</h2>
                                     </a>
                                 </div>
-                                <div class="col-2 activity-category-date">
+                                <div class="col-3 activity-category-date">
                                     <p class="activity-category-data-year">${year}</p>
                                     <p class="activity-category-data-day">${month}/${day}</p>
                                 </div>
