--- a/activity_category.html
+++ b/activity_category.html
@@ -72,6 +72,7 @@
             <ul>
                 <li><a class="nav-link scrollto" href="index.html">首页</a></li>
                 <li><a class="nav-link scrollto active" href="#">学术活动</a></li>
+                <li><a class="nav-link scrollto" href="project.html">开源项目</a></li>
                 <li><a class="nav-link scrollto" href="committee.html">社区成员</a></li>
                 <li><a class="nav-link scrollto" href="#footer">联系我们</a></li>
             </ul>
