--- a/committee.html
+++ b/committee.html
@@ -69,6 +69,7 @@
             <ul>
                 <li><a class="nav-link scrollto" href="index.html">首页</a></li>
                 <li><a class="nav-link scrollto" href="activity_category.html">学术活动</a></li>
+                <li><a class="nav-link scrollto" href="project.html">开源项目</a></li>
                 <li><a class="nav-link scrollto active" href="#">社区成员</a></li>
                 <li><a class="nav-link scrollto" href="#footer">联系我们</a></li>
             </ul>
@@ -87,7 +88,7 @@
 
     <section id="committee">
         <div class="container">
-            <div id="committee-title" class="section-header" data-aos="fade-up">
+            <div id="committee-title" class="section-header committee-html" data-aos="fade-up">
                 <p>Community Members</p>
                 <h2>社区成员</h2>
                 <p id="committee-title-tip">（按照姓名排序）</p>
@@ -123,7 +124,6 @@
         try {
             // 发起请求获取 seminar 数据
             const result = await findMembersByGroup();
-            console.log(result);
 
             let html_str_list = [];
 
