--- a/activity_category.html
+++ b/activity_category.html
@@ -117,7 +117,7 @@
                             <h2>往期活动</h2>
                         </div>
                         <div id="activity-category"></div>
-                        <div id="pagination"></div>
+                        <div id="pagination" data-aos="fade-up"></div>
                     </div>
                 </div>
             </div>
