fix. project 网页标题

--- a/project.html
+++ b/project.html
@@ -25,7 +25,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <!-- 页面标题 -->
-  <title>MLNLP社区</title>
+  <title>开源项目</title>
   <!-- 页面描述 -->
   <meta content="" name="description">
   <!-- 页面关键词 -->
